--- a/index.html
+++ b/index.html
@@ -698,8 +698,8 @@
         <a href="#pricing" class="btn btn-outline">
           Pricing & access
         </a>
-        <!-- TODO: replace with real checkout URL -->
-        <a href="https://example-checkout-link.com"
+        <!-- Early access via email for now -->
+        <a href="mailto:michael@thetokenizer.io?subject=TVAC%20early%20access"
            class="btn btn-primary">
           <span>Get early access</span>
           <span class="btn-icon">→</span>
@@ -724,8 +724,8 @@
         </p>
 
         <div class="hero-actions">
-          <!-- TODO: replace with actual demo URL -->
-          <a href="https://tokenlex-ui-demo.onrender.com"
+          <!-- LINKED TO ANALYSIS APP -->
+          <a href="https://tokenlex-ui-dev.onrender.com"
              class="btn btn-primary">
             <span>Try TVAC demo</span>
             <span class="btn-icon">▶</span>
@@ -948,13 +948,13 @@
             <li>Preferential commercial terms for future enterprise use.</li>
           </ul>
           <div style="display:flex; gap:0.7rem; flex-wrap:wrap; margin-top:0.6rem;">
-            <!-- TODO: replace with real checkout URL -->
-            <a href="https://example-checkout-link.com"
+            <!-- Paid pilot via email for now -->
+            <a href="mailto:michael@thetokenizer.io?subject=TVAC%20paid%20pilot"
                class="btn btn-primary">
               <span>Request paid pilot</span>
               <span class="btn-icon">→</span>
             </a>
-            <a href="mailto:info@example.com?subject=TVAC%20founding%20tester"
+            <a href="mailto:michael@thetokenizer.io?subject=TVAC%20partnership"
                class="btn btn-outline">
               <span>Talk about a partnership</span>
             </a>
@@ -1048,13 +1048,13 @@
           </div>
         </div>
         <div style="display:flex; gap:0.7rem; flex-wrap:wrap;">
-          <!-- TODO: replace with actual demo URL -->
-          <a href="https://tokenlex-ui-demo.onrender.com"
+          <!-- LINKED TO ANALYSIS APP -->
+          <a href="https://tokenlex-ui-dev.onrender.com"
              class="btn btn-primary">
             <span>Run a demo case</span>
             <span class="btn-icon">▶</span>
           </a>
-          <a href="mailto:info@example.com?subject=TVAC%20early%20access"
+          <a href="mailto:michael@thetokenizer.io?subject=TVAC%20walkthrough"
              class="btn btn-outline">
             <span>Book a short walkthrough</span>
           </a>
