Point demo buttons to frozen TVAC

--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
 
         <div class="hero-actions">
           <!-- LINKED TO ANALYSIS APP -->
-          <a href="https://tokenlex-ui-dev.onrender.com"
+          <a href="https://tokenlex-ai-2.onrender.com"
              class="btn btn-primary">
             <span>Try TVAC demo</span>
             <span class="btn-icon">▶</span>
@@ -1093,7 +1093,7 @@
         </div>
         <div style="display:flex; gap:0.7rem; flex-wrap:wrap;">
           <!-- LINKED TO ANALYSIS APP -->
-          <a href="https://tokenlex-ui-dev.onrender.com"
+          <a href="https://tokenlex-ai-2.onrender.com"
              class="btn btn-primary">
             <span>Run a demo case</span>
             <span class="btn-icon">▶</span>
